Add detailed MongoDB Atlas registration guide

--- a/render-deploy-guide.html
+++ b/render-deploy-guide.html
@@ -309,6 +309,15 @@ git push origin main</code>
                 <div class="step-number">4</div>
                 <h2>创建免费MongoDB数据库</h2>
 
+                <div class="info">
+                    <h4>💡 MongoDB详细图解教程</h4>
+                    <p>MongoDB的每个步骤都有详细说明，包括每个按钮在哪里点击！</p>
+                    <a href="file:///Users/xufan3/news-brief-platform/mongodb-atlas-guide.html" target="_blank" class="big-button" style="font-size: 1.1em; margin: 10px 0;">
+                        📖 打开MongoDB超详细图解教程
+                    </a>
+                    <p style="margin-top: 10px;">或者直接注册：</p>
+                </div>
+
                 <a href="https://www.mongodb.com/cloud/atlas/register" target="_blank" class="big-button">
                     👉 点击这里注册MongoDB Atlas
                 </a>
